# confidential-container-examples

./: .gitmodules  README.md
github-activity-verifier/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  arm-template.json  generate-policy.sh  parameters-template.json  policy-template.json
github-activity-verifier/src/: main.rs
github-activity-verifier/src/api/: handlers.rs  types.rs
github-activity-verifier/src/attestation/: client.rs  mod.rs
github-activity-verifier/src/github/: client.rs  types.rs
github-activity-verifier/src/utils/: errors.rs  mod.rs  storage.rs  validation.rs
github-activity-verifier/src/verification/: engine.rs
github-activity-verifier/static/: app.js  index.html  style.css
hello-world/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  arm-template.json
hello-world/src/: main.rs
